Project-01/force-app/main/default/objects/Sales_item__c/Sales_item__c.object-meta.xml
<CustomObject>
    <label>Sales item</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Sales item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>