Project-01/force-app/main/default/objects/Sales_item__c/fields/Commision_rate__c.field-meta.xml
<CustomField>
    <fullName>Commision_rate__c</fullName>
    <label>Commision rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>