Project-01/force-app/main/default/objects/Sales_item__c/fields/Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Retail_Price__c</fullName>
    <label>Retail Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>