Project-01/force-app/main/default/objects/Sales_item__c/fields/Sales_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Number</label>
    <referenceTo>Sales__c</referenceTo>
    <relationshipLabel>Sales items</relationshipLabel>
    <relationshipName>Sales_items</relationshipName>
    <type>Lookup</type>
</CustomField>