Project-01/force-app/main/default/objects/Sales_item__c/fields/Special_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Special_Order_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Order Number</label>
    <referenceTo>Special_Order__c</referenceTo>
    <relationshipLabel>Sales items</relationshipLabel>
    <relationshipName>Sales_items</relationshipName>
    <type>Lookup</type>
</CustomField>